# msPyExcelSQL

./: .gitignore  LICENSE  README.md  __init__.py  map.drawio  pyproject.toml  setup.cfg  setup.py
ExcelSQL/: Main.py  __init__.py  deploy.py
ExcelSQL/ExcelController/: connection.py
ExcelSQL/ExcelModel/: __init__.py  model.py  model_interfaces.py
ExcelSQL/ExcelRequest/: excelJoin.py  excelrequest.py  requestUtils.py  request_mixins.py
ExcelSQL/ExcelSheet/: __init__.py  excelcolumn.py  excelsheet.py  interfaces.py  modelsheet.py
src/: __init__.py  deploy.py
src/ExcelController/: __init__.py  excelcontroller.py
src/ExcelModel/: model.py  model_interfaces.py
src/ExcelRequest/: __init__.py
src/ExcelSheet/: excelcolumn.py  excelsheet.py  modelsheet.py
tests/: TestTemplate.py  example.xlsx
tests/ExcelController_tests/: connection_test.py  excelcontroller_test.py
tests/ExcelModel_tests/: excelmodel_test.py
tests/ExcelRequest_tests/: excelJoin_test.py  excelrequest_test.py
tests/ExcelSheet_tests/: excelsheet_test.py
tests/Main/: Main_test.py
