[metadata]
name = msPyExcelSQL
version = 0.1.0
author = Vladimir Polyakov
author_email = xapoh.deathsoft95@gmail.com
description = "Package let to treat excel file as database directly or via class entity"
long_description= file:README.md
long_description_content_type=text/markdown
url=https://github.com/XAPOH95/msPyExcelSQL
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Windows only

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires = 
    pyodbc